--- a/pages/paneles.html
+++ b/pages/paneles.html
@@ -24,11 +24,11 @@
       </svg></label>
 
     <!-- barra de subnavegavion  -->
-    <a class="menu-desplegable" href="index.html"><img src="/image/mundonatural.png" alt="logo de inicio"></a>
+    <a class="menu-desplegable" href="../index.html"><img src="/image/mundonatural.png" alt="logo de inicio"></a>
     <ul class="menu-desplegable">
       <li><a href="">HTML</a>
         <ul class="submenu">
-          <a href="">
+          <a href="paneles.html">
             <li>Teoría</li>
           </a>
           <a href="">
@@ -76,8 +76,7 @@
       <div class="panel">
         <input type="radio" name="panel" class="panel-input" id="panel1">
         <label for="panel1">Panel 1</label>
-        <div class="contenido">
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt iste pariatur quos reprehenderit deleniti
+        <div class="contenido">          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt iste pariatur quos reprehenderit deleniti
             tenetur quae ipsa omnis maxime fuga.</p>
         </div>
       </div>
@@ -410,8 +409,13 @@
        <!--Dayspedia.com widget ENDS https://dayspedia.com/widgets/analog/-->
  </div>
 
- <a href="https://www.zeitverschiebung.net/clock-widget-iframe-v2?language=es&size=large&timezone=Europe%2FMadrid" target="_blank">Fuente 1</a>
- <a href="https://dayspedia.com" target="_blank">Fuente 2</a>
+ <div>
+ <ul>
+  <li><a href="https://www.zeitverschiebung.net/clock-widget-iframe-v2?language=es&size=large&timezone=Europe%2FMadrid" target="_blank">Fuente 1</a></li>
+  <li><a href="https://dayspedia.com" target="_blank">Fuente 2</a></li>
+ </ul> 
+ </div>
+
 </body>
 
 </html>
