--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <li><a href="">Nosotros</a></li>
         <li><a href="">Servicios</a></li>
         <li><a href="">Contacto</a></li>
+        <li><a href="pages/paneles.html">Paneles</a></li>
       </ul>
     </nav>
 
