ultima modificCION JUEVES

--- a/pages/checked.html
+++ b/pages/checked.html
@@ -35,12 +35,12 @@
         <h2>Tab 2</h2>
         <p>Ad voluptate ut nulla in ad laboris. Magna duis laboris. Culpa culpa et ad nostrud mollit dolore sint ex. Consequat ex.</p>
     </div>
-    <div class="content">
+      <div class="content">
         <a name="tab3" id="tab3"></a>
         <h2>Tab 3</h2>
-        <p>Exercitation aute mollit eu anim in enim cupidatat. Anim id consequat aute ex proident incididunt exercitation...</p>
+        <p>Ad voluptate ut nulla in ad laboris. Magna duis laboris. Culpa culpa et ad nostrud mollit dolore sint ex. Consequat ex.</p>
     </div>
-</div>
+ </div>
 
 </body>
 
