primera pagina viernes github

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     href="https://unsplash.com/es/fotos/las-montanas-y-las-nubes-son-iluminadas-por-el-sol-poniente-7GdwckDlP6k/"></a>
 
   <header id="header">
-    <img src="image/mundonatural.png">
+    <img src="../primero/image/mundonatural.png">
     <h1><em>Blog con header</em></h1>
     <p>
       <a href="">Botón</a>
