--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     href="https://unsplash.com/es/fotos/las-montanas-y-las-nubes-son-iluminadas-por-el-sol-poniente-7GdwckDlP6k/"></a>
 
   <header id="header">
-    <img src="../primero/image/mundonatural.png">
+    <img src="image/mundonatural.png">
     <h1><em>Blog con header</em></h1>
     <p>
       <a href="">Botón</a>
@@ -30,7 +30,7 @@
   <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
 </svg></label>
 
-    <a class="menu-desplegable" href="index.html"><img src="../primero/image/mundonatural.png" alt="logo de inicio"></a>
+    <a class="menu-desplegable" href="index.html"><img src="image/mundonatural.png" alt="logo de inicio"></a>
       <ul class="menu-desplegable">
         <li><a href="">Nosotros</a></li>
         <li><a href="">Servicios</a></li>
