--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -30,14 +30,14 @@
       </ul>
     </nav>
 
-    <!-- float -->
+    <!-- float 
      <article class="noticia">
         <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus odio adipisci ipsum non praesentium aliquid veritatis explicabo accusamus, eos hic provident quidem enim totam? At ut veritatis optio odio ratione.</h1>
         <img class="noticia__img--left" src="https://content.nationalgeographic.com.es/medio/2025/09/28/2-osos_b7a54f5f_250928180341_1280x854.webp" alt="">
         <p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipisicing elit. Deserunt quo recusandae facere distinctio. <a href="https://www.nationalgeographic.com.es/fotografia/foto-del-dia/jugando-antes-cena_26268" target="_blank">Possimus</a> magnam voluptas autem tenetur cupiditate commodi laudantium neque pariatur quam aliquam incidunt, fugiat doloribus?<br> Soluta eos voluptatem iste dolorem amet quas, eaque cupiditate iusto delectus, dignissimos ipsum! Laboriosam repellat sint architecto aliquid quisquam provident itaque atque ut obcaecati natus? <strong>Dignissimos sint totam fugit</strong> ipsa voluptatibus eius dolor provident excepturi consequuntur deleniti delectus aut, quia nam unde quam hic asperiores!<br> Eius earum culpa iusto maiores tempore, sunt cum harum facere consequatur eligendi quos, minima officia fuga praesentium iure magni esse! Consectetur facere modi voluptatum, quasi dolores perspiciatis!</p>
 
     </article>
-
+-->
     <!-- galeria -->
     <div class="galeria">
 <img src="/image/jonatan-pie-9P_VNWgeOxo-unsplash.jpg" alt="imagen1"/>
