--- a/pages/paneles.html
+++ b/pages/paneles.html
@@ -24,7 +24,7 @@
       </svg></label>
 
     <!-- barra de subnavegavion  -->
-    <a class="menu-desplegable" href="../index.html"><img src="/image/mundonatural.png" alt="logo de inicio"></a>
+    <a class="menu-desplegable" href="../index.html"><img src="../image/mundonatural.png" alt="logo de inicio"></a>
     <ul class="menu-desplegable">
       <li><a href="">HTML</a>
         <ul class="submenu">
