--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
     <a class="menu-desplegable" href="index.html"><img src="image/mundonatural.png" alt="logo de inicio"></a>
       <ul class="menu-desplegable">
-        <li><a href="">Nosotros</a></li>
-        <li><a href="">Servicios</a></li>
-        <li><a href="">Contacto</a></li>
+        <li><a href="pages/checked.html">Nosotros</a></li>
+        <li><a href="pages/galeria.html">Servicios</a></li>
+        <li><a href="pages/float.html">Contacto</a></li>
         <li><a href="pages/paneles.html">Paneles</a></li>
       </ul>
     </nav>
