--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -40,12 +40,12 @@
 -->
     <!-- galeria -->
     <div class="galeria">
-<img src="/image/jonatan-pie-9P_VNWgeOxo-unsplash.jpg" alt="imagen1"/>
-<img src="/image/keegan-houser--Q_t4SCN8c4-unsplash.jpg" alt="imagen2"/>
-<img src="/image/keegan-houser--Q_t4SCN8c4-unsplash.jpg" alt="imagen3"/>
-<img src="/image/jonatan-pie-9P_VNWgeOxo-unsplash.jpg" alt="imagen4"/>
-<img src="/image/jonatan-pie-9P_VNWgeOxo-unsplash.jpg" alt="imagen5"/>
-<img src="/image/keegan-houser--Q_t4SCN8c4-unsplash.jpg" alt="imagen6"/>
+<img src="../image/jonatan-pie-9P_VNWgeOxo-unsplash.jpg" alt="imagen1"/>
+<img src="../image/keegan-houser--Q_t4SCN8c4-unsplash.jpg" alt="imagen2"/>
+<img src="../image/keegan-houser--Q_t4SCN8c4-unsplash.jpg" alt="imagen3"/>
+<img src="../image/jonatan-pie-9P_VNWgeOxo-unsplash.jpg" alt="imagen4"/>
+<img src="../image/jonatan-pie-9P_VNWgeOxo-unsplash.jpg" alt="imagen5"/>
+<img src="../image/keegan-houser--Q_t4SCN8c4-unsplash.jpg" alt="imagen6"/>
     </div>
 
 </body>
