--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mi blog inicial</title>
+  <title>Mi blog de naturaleza</title>
   <link rel="stylesheet" href="styles/styles.css">
   <link rel="shortcut icon" href="image/header.png" type="image/x-icon">
 </head>
@@ -15,12 +15,16 @@
 
   <header id="header">
     <img src="image/mundonatural.png">
-    <h1><em>Blog con header</em></h1>
+        <h1><em>Mi Blog de Naturaleza</em></h1>
     <p>
-      <a href="">Botón</a>
+      <a href="image/ImagenIA.png" >YO</a>
+    </p>  
+    <p>Foto de <a
+      href="https://unsplash.com/es/@r3dmax?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Jonatan
+      Pie</a> en <a
+      href="https://unsplash.com/es/fotos/dos-excursionistas-se-paran-en-una-cresta-montanosa-geotermica-9P_VNWgeOxo?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>  
     </p>
-    
-  </header>
+      </header>
 
   <!--Barra de navegacion-->
    <nav>
