--- a/pages/float.html
+++ b/pages/float.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="../styles/float.css">
 </head>
 <body>
+
+<h1>🌞 Hola Mundo 🌍</h1> 
+   <input type="text" id="inputNombre" placeholder="Tu nombre aquí">
+    <br>
+    <button onClick="mostrarNombre()">Saluda</button>
+
+<!-- <br>
+     <input type="number" placeholder="Pon tu año de nacimiento" id="inputAnioNac">
+   <p id="resultado"></p>
+   <button onclick="calcularEdad()">Calcula tu Edad</button>  -->
+
     <!-- <header id="header">
     <img src="../image/header.png">
     <h1><em>Blog con Header</em></h1>
@@ -20,7 +31,8 @@
       <label for="menu"> 
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
   <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
-</svg></label>
+</svg>
+</label>
 
     <a class="menu-desplegable" href="../index.html"><img src="../image/mundonatural.png" alt="logo de inicio"></a>
       <ul class="menu-desplegable">
@@ -39,52 +51,8 @@
     </article>
 
 
+
+    <script src="../js/index.js"></script>
 </body>
-<!--<main>
-    <section id="Nosotros">
-      <p>N Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quod repellendus voluptatibus rerum magnam
-        eligendi officiis possimus autem dignissimos at culpa, nobis aspernatur velit laboriosam debitis, voluptas
-        fugiat id mollitia!Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quod repellendus voluptatibus rerum magnam
-        eligendi officiis possimus autem dignissimos at culpa, nobis aspernatur velit laboriosam debitis, voluptas
-        fugiat id mollitia!Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quod repellendus voluptatibus rerum magnam
-        eligendi officiis possimus autem dignissimos at culpa, nobis aspernatur velit laboriosam debitis, voluptas
-        fugiat id mollitia!Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quod repellendus voluptatibus rerum magnam
-        eligendi officiis possimus autem dignissimos at culpa, nobis aspernatur velit laboriosam debitis, voluptas
-        fugiat id mollitia!Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quod repellendus voluptatibus rerum magnam
-        eligendi officiis possimus autem dignissimos at culpa, nobis aspernatur velit laboriosam debitis, voluptas
-        fugiat id mollitia!Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quod repellendus voluptatibus rerum magnam
-        eligendi officiis possimus autem dignissimos at culpa, nobis aspernatur velit laboriosam debitis, voluptas
-        fugiat id mollitia!</p>
-    </section>
-    <section id="Servicios">
-      <p>S Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quod repellendus voluptatibus rerum magnam
-        eligendi officiis possimus autem dignissimos at culpa, nobis aspernatur velit laboriosam debitis, voluptas
-        fugiat id mollitia!Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quod repellendus voluptatibus rerum magnam
-        eligendi officiis possimus autem dignissimos at culpa, nobis aspernatur velit laboriosam debitis, voluptas
-        fugiat id mollitia!Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quod repellendus voluptatibus rerum magnam
-        eligendi officiis possimus autem dignissimos at culpa, nobis aspernatur velit laboriosam debitis, voluptas
-        fugiat id mollitia!Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quod repellendus voluptatibus rerum magnam
-        eligendi officiis possimus autem dignissimos at culpa, nobis aspernatur velit laboriosam debitis, voluptas
-        fugiat id mollitia!Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quod repellendus voluptatibus rerum magnam
-        eligendi officiis possimus autem dignissimos at culpa, nobis aspernatur velit laboriosam debitis, voluptas
-        fugiat id mollitia!Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quod repellendus voluptatibus rerum magnam
-        eligendi officiis possimus autem dignissimos at culpa, nobis aspernatur velit laboriosam debitis, voluptas
-        fugiat id mollitia!</p>
-    </section>
-    <section id="Contacto">
-      <p>C Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quod repellendus voluptatibus rerum magnam
-        eligendi officiis possimus autem dignissimos at culpa, nobis aspernatur velit laboriosam debitis, voluptas
-        fugiat id mollitia!Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quod repellendus voluptatibus rerum magnam
-        eligendi officiis possimus autem dignissimos at culpa, nobis aspernatur velit laboriosam debitis, voluptas
-        fugiat id mollitia!Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quod repellendus voluptatibus rerum magnam
-        eligendi officiis possimus autem dignissimos at culpa, nobis aspernatur velit laboriosam debitis, voluptas
-        fugiat id mollitia!Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quod repellendus voluptatibus rerum magnam
-        eligendi officiis possimus autem dignissimos at culpa, nobis aspernatur velit laboriosam debitis, voluptas
-        fugiat id mollitia!Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quod repellendus voluptatibus rerum magnam
-        eligendi officiis possimus autem dignissimos at culpa, nobis aspernatur velit laboriosam debitis, voluptas
-        fugiat id mollitia!Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quod repellendus voluptatibus rerum magnam
-        eligendi officiis possimus autem dignissimos at culpa, nobis aspernatur velit laboriosam debitis, voluptas
-        fugiat id mollitia!</p>
-    </section>
-</main>-->
+
 </html>
