cambios float en index - 14/10

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </label>
 
     <a class="menu-desplegable" href="index.html"><img src="image/mundonatural.png" alt="logo de inicio"></a>
-   
+
     <ul class="menu-desplegable">
       <li><a href="pages/checked.html">Nosotros</a></li>
       <li><a href="pages/galeria.html">Servicios</a></li>
@@ -49,20 +49,36 @@
 
 
   <main>
-    
-   <!-- Primer script que dice la edad si le das el año de nacimiento -->
-   <input type="number" placeholder="Pon tu año de nacimiento" id="inputAnioNac">
+
+    <!-- Primer script que dice la edad si le das el año de nacimiento -->
+    <!-- <input type="number" placeholder="Pon tu año de nacimiento" id="inputAnioNac">
    <p id="resultado"></p>
-   <button onclick="calcularEdad()">Calcula tu Edad</button>
- 
+   <button onclick="calcularEdad()">Calcula tu Edad</button> -->
+
 
 
     <section id="lista-nosotros">
+      <article class="noticia">
+        <h2>Jugando antes de la cena</h2>
+        <img class="noticia__img--right"
+          src="https://content.nationalgeographic.com.es/medio/2025/09/28/2-osos_b7a54f5f_250928180341_1280x854.webp"
+          alt="">
       <p>Un amante de la naturaleza es una persona que encuentra bienestar en la conexión con su entorno natural,
         caracterizándose por su capacidad de asombro, su búsqueda de tranquilidad y la inspiración que encuentra en los
         elementos naturales como amaneceres o paisajes. Estas personas suelen ser reflexivas, flexibles, adaptables y
         prudentes, gracias a las lecciones que extraen del propio medio ambiente, el cual les enseña sobre los ciclos,
         la calma y la importancia del respeto por la vida.</p>
+            </article>
+        <figure>
+        <img width="50%"
+          src="https://images.unsplash.com/photo-1526779259212-939e64788e3c?q=80&w=1748&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          alt="">
+        <br>Foto de <a
+          href="https://unsplash.com/es/@khouser01?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Keegan
+          Houser</a> en <a
+          href="https://unsplash.com/es/fotos/hombre-sentado-en-la-roca-rodeado-de-agua--Q_t4SCN8c4?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+
+      </figure>
       <h2>Rasgos y comportamientos</h2>
       <h3>Conexión y asombro:</h3>
       <p>Sienten una profunda conexión con la naturaleza y disfrutan de las experiencias al aire libre. Se emocionan al
@@ -80,50 +96,74 @@
         hacia los demás.</p>
       <h3>Inquietud:</h3>
       <p>A menudo, son personas curiosas que buscan constantemente nuevos lugares y desafíos para explorar.</p>
-      <h3>Prudencia:</h3> 
+      <h3>Prudencia:</h3>
       <p>Desarrollan un sentido de cautela y previsión, aprendiendo a actuar con prudencia para evitar daños
-      innecesarios.</p>
+        innecesarios.</p>
       <h2>Habilidades transferibles al trabajo</h2>
       <h3>Capacidad de análisis:</h3>
       <p>Su habilidad para observar y analizar su entorno se puede trasladar al ámbito laboral para
-      comprender mejor las necesidades de una empresa.</p>
+        comprender mejor las necesidades de una empresa.</p>
       <h3>Gestión de conflictos:</h3>
       <p>Su temple y valentía al afrontar situaciones al aire libre se reflejan en su capacidad para
-      manejar conflictos con iniciativa.</p>
+        manejar conflictos con iniciativa.</p>
       <h3>Liderazgo y resiliencia:</h3>
       <p>La experiencia en la naturaleza puede dotarles de la resiliencia necesaria para afrontar
-      retos, mientras que la reflexión les ayuda a tomar decisiones con serenidad. </p>
+        retos, mientras que la reflexión les ayuda a tomar decisiones con serenidad. </p>
     </section>
     <section id="lista-servicios">
-      <p>SSS Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quod repellendus voluptatibus rerum magnam
-        eligendi officiis possimus autem dignissimos at culpa, nobis aspernatur velit laboriosam debitis, voluptas
-        fugiat id mollitia!</p>
-      <p>SSS Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quod repellendus voluptatibus rerum magnam
-        eligendi officiis possimus autem dignissimos at culpa, nobis aspernatur velit laboriosam debitis, voluptas
-        fugiat id mollitia!</p>
-      <p>SSS Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quod repellendus voluptatibus rerum magnam
-        eligendi officiis possimus autem dignissimos at culpa, nobis aspernatur velit laboriosam debitis, voluptas
-        fugiat id mollitia!</p>
+      <p>Sí, las personas que aman la naturaleza tienden a ser más felices debido a que el contacto con ella reduce el
+        estrés, mejora el estado de ánimo, fomenta la creatividad y promueve un mayor bienestar psicológico y físico.
+      </p>
+      <h2>Beneficios para la felicidad</h2>
+      <h3>Reduce el estrés y la ansiedad:</h3>
+      <p>Estar en la naturaleza disminuye los niveles de cortisol, la hormona del estrés, y la rumia mental asociada a
+        la depresión y la ansiedad.</p>
+      <h3>Mejora el estado de ánimo:</h3>
+      <p>El contacto con el entorno natural puede aumentar la felicidad, fomentar la calma y mejorar el estado general
+        de ánimo.</p>
+      <h3>Aumenta la creatividad y la función cognitiva:</h3>
+      <p>El tiempo al aire libre puede estimular la creatividad, la atención y el desarrollo cognitivo.</p>
+      <h3>Beneficia la salud física:</h3>
+      <p>Respirar aire puro, fortalecer el sistema inmunológico y hacer actividad física en entornos naturales
+        contribuye a un mayor bienestar general.</p>
+      <h3>Fomenta la conexión:</h3>
+      <p>Sentirse parte de un sistema más grande, como el ecosistema, refuerza nuestro bienestar y puede inspirar una
+        mayor empatía y conexión con los demás.</p>
+      <h2>Cómo conectar con la naturaleza</h2>
+      <h3>Actividades al aire libre:</h3>
+      <p>Caminar, correr, hacer yoga o nadar en la naturaleza son formas de conectar.</p>
+      <h3>Observación:</h3>
+      <p>Simplemente sentarse, observar un paisaje, escuchar los sonidos o sentir texturas puede ser muy beneficioso.
+      </p>
+      <h3>En el día a día:</h3>
+      <p>Puedes traer la naturaleza a tu vida a través de plantas en casa, en un balcón o en un jardín pequeño.</p>
+
     </section>
     <section id="lista-contacto">
-      <p>CCC Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi suscipit rerum iure quas. Cumque itaque
-        harum obcaecati eum incidunt, ipsum accusamus et dolore modi rerum corrupti tempore ipsam neque soluta eaque
-        quod nihil ex vero? Ea commodi nulla officia id, laudantium aliquid ex ab deserunt amet repellat minima quo!
-        Nesciunt est quaerat cumque eos. Voluptatibus delectus quisquam incidunt optio porro provident quod eos
-        laboriosam eum qui, natus amet alias. Aperiam facere minus magni esse praesentium nulla aut odit assumenda
-        libero. Pariatur soluta magni, possimus nam doloribus delectus tempore qui corporis quia, sunt minus quos
-        blanditiis, beatae quo aut vitae perferendis aspernatur! Quo ratione, optio nemo exercitationem molestiae vero
-        blanditiis laboriosam minus assumenda tenetur cumque cupiditate aliquid officiis ipsum non eius repudiandae?
-        Inventore molestias assumenda, dicta voluptate exercitationem nobis earum. Vero reiciendis in odit, consequuntur
-        maiores explicabo sit quas asperiores repellat fugiat quidem magni qui optio corporis ipsa, veniam aliquam
-        temporibus, veritatis incidunt nisi tenetur excepturi ratione. Porro nostrum aliquid in praesentium, voluptates
-        quod quia! Sit optio delectus alias esse, unde eaque qui! Exercitationem perspiciatis explicabo maxime.
-        Asperiores aspernatur ipsa illo perferendis minima magni, id commodi minus, sequi ipsam nostrum aliquid
-        doloribus autem maiores eaque deserunt modi quisquam officiis nisi iusto voluptatum. Fugit corrupti ducimus
-        consequatur cupiditate recusandae ipsam error, voluptates at atque, tempore reiciendis fugiat cumque voluptate
-        commodi deleniti sapiente, adipisci culpa non officia architecto assumenda ab nesciunt tenetur. Molestiae
-        tempora delectus impedit illum laudantium alias mollitia dolore minus voluptate, ducimus quis ex, quidem
-        exercitationem dignissimos dolorem itaque. </p>
+      <article class="noticia">
+        <h2>Jugando antes de la cena</h2>
+        <img class="noticia__img--left"
+          src="https://content.nationalgeographic.com.es/medio/2025/09/28/2-osos_b7a54f5f_250928180341_1280x854.webp"
+          alt="">
+        <p>En las costas heladas de Manitoba (Canadá), <strong>un oso polar parece olvidarse por un momento de la
+            caza</strong> y se
+          tumba panza arriba sobre el hielo. Rodar de un lado a otro, frotarse contra la nieve o simplemente tumbarse en
+          el suelo gélido es parte de su comportamiento natural: con ello refrescan su cuerpo tras largas caminatas y,
+          de paso, mantienen limpia su densa capa de pelo, fundamental para regular el calor en un entorno tan extremo.
+        </p>
+        <p>La escena captada por el fotógrafo <a
+            href="https://www.nationalgeographic.com.es/fotografia/foto-del-dia/jugando-antes-cena_26268"
+            target="_blank">Johnny Hayward</a> coincide con la llamada “temporada del
+          oso polar”, cuando estos gigantes se concentran cerca de Churchill, el primer lugar de la bahía de Hudson
+          donde se forma el hielo marino. Allí esperan el ansiado momento en que <strong>las aguas se congelen lo
+            suficiente
+            para salir a cazar focas</strong>. Hasta entonces, entre el hambre y la incertidumbre, algunos se regalan un
+          respiro
+          sobre la blanca alfombra helada, recordándonos que incluso los mayores depredadores del Ártico saben tomarse
+          un descanso.
+        </p>
+
+      </article>
     </section>
     <!-- <div class="caja" id="caja-azul">
       <p>
@@ -152,7 +192,7 @@
             d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z" />
         </svg>Teléfono: +34 600000000</a>
     </div>
-    
+
     <div>
       <a class="contacto" href="micorreo@gmail.com">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor"
@@ -293,16 +333,7 @@
       generaciones</p>
   </div>
 
-  <figure>
-    <img width="50%"
-      src="https://images.unsplash.com/photo-1526779259212-939e64788e3c?q=80&w=1748&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-      alt="">
-    <br>Foto de <a
-      href="https://unsplash.com/es/@khouser01?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Keegan
-      Houser</a> en <a
-      href="https://unsplash.com/es/fotos/hombre-sentado-en-la-roca-rodeado-de-agua--Q_t4SCN8c4?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
 
-  </figure>
 
   <hr>
   <div class="caja" id="caja-azul">
@@ -382,7 +413,7 @@
   </footer>-->
 
 
-<script src="js/index.js"></script>
+  <!-- <script src="js/index.js"></script> -->
 
 
 </body>
