--- a/pages/float.html
+++ b/pages/float.html
@@ -9,10 +9,10 @@
 </head>
 <body>
 
-<h1>🌞 Hola Mundo 🌍</h1> 
+<!-- <h1>🌞 Hola Mundo 🌍</h1> 
    <input type="text" id="inputNombre" placeholder="Tu nombre aquí">
     <br>
-    <button onClick="mostrarNombre()">Saluda</button>
+    <button onClick="mostrarNombre()">Saluda</button> -->
 
 <!-- <br>
      <input type="number" placeholder="Pon tu año de nacimiento" id="inputAnioNac">
@@ -52,7 +52,7 @@
 
 
 
-    <script src="../js/index.js"></script>
+    <!-- <script src="../js/index.js"></script> -->
 </body>
 
 </html>
