--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 
 <body>
-  <a href="https://unsplash.com/es/fotos/las-montanas-y-las-nubes-son-iluminadas-por-el-sol-poniente-7GdwckDlP6k/"></a>
+  <!-- <a href="https://unsplash.com/es/fotos/las-montanas-y-las-nubes-son-iluminadas-por-el-sol-poniente-7GdwckDlP6k/">fsdfxdfg</a> -->
 
   <!-- Header de la página -->
   <header id="header">
     <img src="image/mundonatural.png">
-        <h1><em>Mi Blog de Naturaleza</em></h1>
+    <h1><em>Mi Blog de Naturaleza</em></h1>
     <p>
       <!-- <a href="">Botón</a> -->
       Foto de <a
@@ -55,31 +55,116 @@
    <p id="resultado"></p>
    <button onclick="calcularEdad()">Calcula tu Edad</button> -->
 
-
-
     <section id="lista-nosotros">
       <article class="noticia">
-        <h2>Jugando antes de la cena</h2>
+        <h2>Amantes de la naturaleza</h2>
         <img class="noticia__img--right"
-          src="https://content.nationalgeographic.com.es/medio/2025/09/28/2-osos_b7a54f5f_250928180341_1280x854.webp"
-          alt="">
-      <p>Un amante de la naturaleza es una persona que encuentra bienestar en la conexión con su entorno natural,
-        caracterizándose por su capacidad de asombro, su búsqueda de tranquilidad y la inspiración que encuentra en los
-        elementos naturales como amaneceres o paisajes. Estas personas suelen ser reflexivas, flexibles, adaptables y
-        prudentes, gracias a las lecciones que extraen del propio medio ambiente, el cual les enseña sobre los ciclos,
-        la calma y la importancia del respeto por la vida.</p>
-            </article>
-        <figure>
-        <img width="50%"
           src="https://images.unsplash.com/photo-1526779259212-939e64788e3c?q=80&w=1748&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
           alt="">
-        <br>Foto de <a
-          href="https://unsplash.com/es/@khouser01?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Keegan
-          Houser</a> en <a
-          href="https://unsplash.com/es/fotos/hombre-sentado-en-la-roca-rodeado-de-agua--Q_t4SCN8c4?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+        <figcaption>Foto de <a
+            href="https://unsplash.com/es/@khouser01?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Keegan
+            Houser</a> en <a
+            href="https://unsplash.com/es/fotos/hombre-sentado-en-la-roca-rodeado-de-agua--Q_t4SCN8c4?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+        </figcaption>
+        <p>Un amante de la naturaleza es una persona que encuentra bienestar en la conexión con su entorno natural,
+          caracterizándose por su capacidad de asombro, su búsqueda de tranquilidad y la inspiración que encuentra en
+          los
+          elementos naturales como amaneceres o paisajes. Estas personas suelen ser reflexivas, flexibles, adaptables y
+          prudentes, gracias a las lecciones que extraen del propio medio ambiente, el cual les enseña sobre los ciclos,
+          la calma y la importancia del respeto por la vida.</p>
+      </article>
 
-      </figure>
-      <h2>Rasgos y comportamientos</h2>
+       <article>
+        <h2>Rasgos y comportamientos</h2>
+        <div id="grid">
+
+          <div>
+            <h3>Conexión y asombro:</h3>
+            <p>Sienten una profunda conexión con la naturaleza y disfrutan de las experiencias al aire libre. Se
+              emocionan al
+              contemplar elementos como el amanecer o las estrellas.</p>
+          </div>
+
+          <div>
+            <h3>Búsqueda de bienestar:</h3>
+            <p>Consideran el contacto con la naturaleza como una fuente importante de salud física, mental y
+              emocional.</p>
+          </div>
+
+          <div>
+            <h3>Capacidad de reflexión:</h3>
+            <p>El tiempo a solas en la naturaleza les permite reflexionar y encontrar claridad, lo que a menudo
+              se traduce en
+              una toma de decisiones más pausada y consciente.</p>
+          </div>
+
+          <div>
+            <h3>Flexibilidad y adaptabilidad:</h3>
+            <p>Al estar expuestos a los cambios constantes del medio ambiente, desarrollan la habilidad de
+              adaptarse a
+              diferentes situaciones de forma flexible.</p>
+          </div>
+
+          <div>
+            <h3>Respeto y humildad:</h3>
+            <p>La naturaleza les enseña a respetar los ritmos y ciclos de la vida, lo que fomenta la
+              humildad y la tolerancia
+              hacia los demás.</p>
+          </div>
+
+          <div>
+            <h3>Inquietud:</h3>
+            <p>A menudo, son personas curiosas que buscan constantemente nuevos lugares y desafíos
+              para explorar.</p>
+          </div>
+
+          <div>
+            <h3>Prudencia:</h3>
+            <p>Desarrollan un sentido de cautela y previsión, aprendiendo a actuar con prudencia
+              para evitar daños
+          </div>
+
+        </div>
+      </article>
+      
+      <p>Sí, las personas que aman la naturaleza tienden a ser más felices debido a que el contacto con ella reduce el
+        estrés, mejora el estado de ánimo, fomenta la creatividad y promueve un mayor bienestar psicológico y físico.
+      </p>
+
+      <div>
+        <h2>Beneficios para la felicidad</h2>
+        <h3>Reduce el estrés y la ansiedad:</h3>
+        <p>Estar en la naturaleza disminuye los niveles de cortisol, la hormona del estrés, y la rumia mental asociada a
+          la depresión y la ansiedad.</p>
+        <h3>Mejora el estado de ánimo:</h3>
+        <p>El contacto con el entorno natural puede aumentar la felicidad, fomentar la calma y mejorar el estado general
+          de ánimo.</p>
+        <h3>Aumenta la creatividad y la función cognitiva:</h3>
+        <p>El tiempo al aire libre puede estimular la creatividad, la atención y el desarrollo cognitivo.</p>
+        <h3>Beneficia la salud física:</h3>
+        <p>Respirar aire puro, fortalecer el sistema inmunológico y hacer actividad física en entornos naturales
+          contribuye a un mayor bienestar general.</p>
+        <h3>Fomenta la conexión:</h3>
+        <p>Sentirse parte de un sistema más grande, como el ecosistema, refuerza nuestro bienestar y puede inspirar una
+          mayor empatía y conexión con los demás.</p>
+      </div>
+      <div>
+
+        <h2>Cómo conectar con la naturaleza</h2>
+
+
+        <h3>Actividades al aire libre:</h3>
+        <p>Caminar, correr, hacer yoga o nadar en la naturaleza son formas de conectar.</p>
+        <h3>Observación:</h3>
+        <p>Simplemente sentarse, observar un paisaje, escuchar los sonidos o sentir texturas puede ser muy beneficioso.
+        </p>
+        <h3>En el día a día:</h3>
+        <p>Puedes traer la naturaleza a tu vida a través de plantas en casa, en un balcón o en un jardín pequeño.</p>
+      </div>
+
+    </section>
+
+    <!-- <h2>Rasgos y comportamientos</h2>
       <h3>Conexión y asombro:</h3>
       <p>Sienten una profunda conexión con la naturaleza y disfrutan de las experiencias al aire libre. Se emocionan al
         contemplar elementos como el amanecer o las estrellas.</p>
@@ -108,9 +193,9 @@
         manejar conflictos con iniciativa.</p>
       <h3>Liderazgo y resiliencia:</h3>
       <p>La experiencia en la naturaleza puede dotarles de la resiliencia necesaria para afrontar
-        retos, mientras que la reflexión les ayuda a tomar decisiones con serenidad. </p>
-    </section>
-    <section id="lista-servicios">
+        retos, mientras que la reflexión les ayuda a tomar decisiones con serenidad. </p> -->
+
+    <!-- <section id="lista-servicios">
       <p>Sí, las personas que aman la naturaleza tienden a ser más felices debido a que el contacto con ella reduce el
         estrés, mejora el estado de ánimo, fomenta la creatividad y promueve un mayor bienestar psicológico y físico.
       </p>
@@ -138,23 +223,25 @@
       <h3>En el día a día:</h3>
       <p>Puedes traer la naturaleza a tu vida a través de plantas en casa, en un balcón o en un jardín pequeño.</p>
 
-    </section>
+    </section> -->
     <section id="lista-contacto">
       <article class="noticia">
         <h2>Jugando antes de la cena</h2>
         <img class="noticia__img--left"
           src="https://content.nationalgeographic.com.es/medio/2025/09/28/2-osos_b7a54f5f_250928180341_1280x854.webp"
           alt="">
+        <figcaption><a href="https://www.bearwitnessphoto.com/" target="_blank"><em>Johnny Hayward</em></a></figcaption>
         <p>En las costas heladas de Manitoba (Canadá), <strong>un oso polar parece olvidarse por un momento de la
             caza</strong> y se
           tumba panza arriba sobre el hielo. Rodar de un lado a otro, frotarse contra la nieve o simplemente tumbarse en
           el suelo gélido es parte de su comportamiento natural: con ello refrescan su cuerpo tras largas caminatas y,
           de paso, mantienen limpia su densa capa de pelo, fundamental para regular el calor en un entorno tan extremo.
         </p>
-        <p>La escena captada por el fotógrafo <a
+        <p>La escena captada por el fotógrafo Johnny Hayward coincide con la llamada “<a
             href="https://www.nationalgeographic.com.es/fotografia/foto-del-dia/jugando-antes-cena_26268"
-            target="_blank">Johnny Hayward</a> coincide con la llamada “temporada del
-          oso polar”, cuando estos gigantes se concentran cerca de Churchill, el primer lugar de la bahía de Hudson
+            target="_blank">temporada del
+            oso polar</a>” , cuando estos gigantes se concentran cerca de Churchill, el primer lugar de la bahía de
+          Hudson
           donde se forma el hielo marino. Allí esperan el ansiado momento en que <strong>las aguas se congelen lo
             suficiente
             para salir a cazar focas</strong>. Hasta entonces, entre el hambre y la incertidumbre, algunos se regalan un
